@@ -1,3 +1,7 @@
+2011-03-04	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
+	* shared/start/start.S: Remove conflict markers in comment.
+
 2011-02-02	Ralf Corsépius <ralf.corsepius@rtems.org>
 
 	* configure.ac: Require autoconf-2.68, automake-1.11.1.
